Fixes for covering area during ajax requests

--- a/manager/templates/manager/css/main.css
+++ b/manager/templates/manager/css/main.css
@@ -48,7 +48,7 @@
   background-color: #AAA; 
   color: #000;
 }
-#loading-cover {
+.loading-cover {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -62,6 +62,15 @@
   text-align: center;
   vertical-align: middle;
   opacity: 0.9;
+}
+.loading-uncover {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: 1px;
+    height: 1px;
+    z-index: 0;
+    display: none;
 }
 
 .form_inline {
